--- a/titanic.practice.ipynb
+++ b/titanic.practice.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  查看資料數據"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 434,
    "metadata": {},
@@ -643,6 +650,7 @@
     }
    ],
    "source": [
+    "#將資料合併以便處理\n",
     "data =train.append(test)\n",
     "data"
    ]
@@ -686,6 +694,13 @@
    ],
    "source": [
     "sns.countplot(data['Survived'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 檢視在各個變項中，生存率是否有差異"
    ]
   },
   {
@@ -922,6 +937,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#將父母小孩人數與兄弟姊妹人數合併為家庭大小\n",
     "data['Family_Size']=data['Parch']+data['SibSp']"
    ]
   },
@@ -959,12 +975,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 處理Title的部分"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 450,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['Title1']=data['Name'].str.split(\",\" ,expand =True)[1]  #expand是將其資料分割好"
+    "data['Title1']=data['Name'].str.split(\",\" ,expand =True)[1]  "
    ]
   },
   {
@@ -1542,42 +1565,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data['Title2'] = data['Title1'].replace('Mlle','Miss')\n",
-    "#data['Title2'] = data['Title1'].replace('Mme','Mrs')\n",
-    "#data['Title2'] = data['Title1'].replace('Ms','Miss')\n",
-    "#data['Title2'] = data['Title1'].replace('Dr','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Major','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Lady','Mrs')\n",
-    "#data['Title2'] = data['Title1'].replace('the Countess','Mrs')\n",
-    "#data['Title2'] = data['Title1'].replace('Jonkheer','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Col','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Rev','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Capt','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Sir','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Don','Mr')\n",
-    "#data['Title2'] = data['Title1'].replace('Dona','Mrs')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 461,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data['Title2'] = data['Title1'].replace([\"Mlle\",\"Mme\",\"Ms\",\"Dr\",\"Major\",\"Lady\",\"the Countess\",\"Jonkheer\",\"Col\",\"Rev\",\"Capt\",\"Sir\",\"Don\",\"Dona\"],\n",
-    "#[\"Miss\",\"Mrs\",\"Miss\",\"Mr\",\"Mr\",\"Mrs\",\"Mrs\",\"Mr\",\"Mr\",\"Mr\",\"Mr\",\"Mr\",\"Mr\",\"Mrs\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#由於title太多了，因此把類似的title合併\n",
     "data['Title2'] = data['Title1'].str.strip().replace(['Mlle','Mme','Ms','Dr','Major','Lady','the Countess','Jonkheer','Col','Rev','Capt','Sir','Don','Dona'],\n",
     "         ['Miss','Mrs','Miss','Mr','Mr','Mrs','Mrs','Mr','Mr','Mr','Mr','Mr','Mr','Mrs'])"
    ]
@@ -1878,6 +1870,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#將類別資料轉換為數值資料\n",
     "data['Sex']= data['Sex'].astype('category').cat.codes\n",
     "data['Embarked']=data['Embarked'].astype('category').cat.codes\n",
     "data['Pclass']=data['Pclass'].astype('category').cat.codes\n",
@@ -1888,37 +1881,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 491,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/beiyulin/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:966: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    }
-   ],
    "source": [
-    "dataAgeNull=data[data['Age'].isnull()] #當年齡沒資料則回傳true\n",
-    "dataAgeNotNull=data[data['Age'].notnull()]#當年齡有資料則回傳true\n",
-    "remove_outlier = dataAgeNotNull[(np.abs(dataAgeNotNull[\"Fare\"]-dataAgeNotNull[\"Fare\"].mean())>(4*dataAgeNotNull[\"Fare\"].std()))|\n",
-    "                      (np.abs(dataAgeNotNull[\"Family_Size\"]-dataAgeNotNull[\"Family_Size\"].mean())>(4*dataAgeNotNull[\"Family_Size\"].std()))                     \n",
-    "                     ]\n",
-    "rfModel_age = RandomForestRegressor(n_estimators=2000,random_state=42)\n",
-    "ageColumns = ['Embarked', 'Fare', 'Pclass', 'Sex', 'Family_Size', 'Title1', 'Title2','Cabin','Ticket_info']\n",
-    "rfModel_age.fit(remove_outlier[ageColumns], remove_outlier[\"Age\"])\n",
-    "\n",
-    "ageNullValues = rfModel_age.predict(X= dataAgeNull[ageColumns])\n",
-    "dataAgeNull.loc[:,\"Age\"] = ageNullValues\n",
-    "data = dataAgeNull.append(dataAgeNotNull)\n",
-    "data.reset_index(inplace=True, drop=True) #整句是要增加一個新的index/ inplace:不創新的東西，直接修改 /drop：刪除資料"
+    "# 測試集與訓練集"
    ]
   },
   {
@@ -1928,7 +1894,7 @@
    "outputs": [],
    "source": [
     "dataTrain = data[pd.notnull(data['Survived'])].sort_values(by=[\"PassengerId\"])\n",
-    "dataTest = data[pd.notnull(data['Survived'])].sort_values(by=[\"PassengerId\"])\n"
+    "dataTest = data[pd.notnull(data['Survived'])].sort_values(by=[\"PassengerId\"])"
    ]
   },
   {
@@ -2191,6 +2157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 模式訓練"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 500,
    "metadata": {},
@@ -2317,6 +2290,7 @@
     }
    ],
    "source": [
+    "#檢視特徵重要性\n",
     "pd.concat((pd.DataFrame(dataTrain.iloc[:, 1:].columns, columns = ['variable']), \n",
     "           pd.DataFrame(rf.feature_importances_, columns = ['importance'])), \n",
     "          axis = 1).sort_values(by='importance', ascending = False)[:20]"
